<resources>    <string name="app_name">Consulta Vendedores</string>    <string name="verificar">Verificar   &#xf002;</string>    <string name="apelido">Apelido</string>    <string name="title_pesquisa">Consulta de dados públicos do MercadoLivre</string>    <string name="title_activity_dashboard_person">Consulta dados MercadoLivre</string>    <string name="navigation_drawer_open">Abrir Navegação</string>    <string name="navigation_drawer_close">Fechar Navegação</string>    <string name="nav_header_title">MarcosApps</string>    <string name="nav_header_subtitle">marcosdossantos43@hotmail.com</string>    <string name="nav_header_desc">Cabeçalho</string>    <string name="action_close">Sair</string>    <string name="icon_money">&#xf0d6;</string>    <string name="icon_condition">&#xf05a;</string>    <string name="icon_shop">&#xf291;</string>    <string name="icon_tag">&#xf02b;</string>    <string name="btnCancelar">Cancelar  &#xf00d;</string>    <!-- Dialog -->    <string name="vendedor_naoencontrado">Dados não encontrado</string>    <string name="verifique_dados">  -  Verifique se os dados estão correto. </string>    <string name="sem_conexao">Sem Conexão</string>    <string name="desc_conexao"> &#xf1eb; -  Verifique sua conexão com a Internet. </string>    <string name="title_campos">Campos inválido</string>    <string name="desc_campos"> &#xf040; - Preencha os dados corretamente. </string>    <string name="key_Person">IdUser</string></resources>