<?xml version="1.0" encoding="utf-8"?><android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:background="@xml/gradient_color_back"    tools:context=".Views.SearchPersonActivity"    tools:layout_editor_absoluteY="25dp">    <LinearLayout        android:layout_width="match_parent"        android:layout_height="match_parent"        android:layout_marginStart="10dp"        android:layout_marginTop="40dp"        android:layout_marginEnd="10dp"        android:layout_marginBottom="40dp"        android:orientation="vertical"        android:padding="16dp"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent">        <com.airbnb.lottie.LottieAnimationView            android:id="@+id/animation_search"            android:layout_width="match_parent"            android:layout_height="match_parent"            android:layout_alignParentStart="true"            android:layout_alignParentTop="true"            android:layout_gravity="center"            app:lottie_autoPlay="false"            app:lottie_fileName="search_anim.json"            app:lottie_loop="false"            android:visibility="gone"            tools:ignore="MissingConstraints" />        <android.support.v7.widget.CardView            android:id="@+id/cardMain"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginTop="8dp"            android:layout_marginBottom="8dp"            android:gravity="center"            android:orientation="vertical"            android:visibility="visible"            android:padding="16dp">                        <LinearLayout                android:layout_width="match_parent"                android:layout_height="455dp"                android:orientation="vertical"                android:padding="10dp">                <TextView                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:text="@string/title_pesquisa"                    android:textAlignment="center"                    android:textColor="#1D2F7A"                    android:textSize="22sp"                    android:layout_marginBottom="10dp"/>                <View                    android:layout_width="match_parent"                    android:layout_height="1dp"                    android:background="@color/colorPrimary" />                <ImageView                    android:id="@+id/imagem"                    android:layout_width="match_parent"                    android:layout_height="210dp"                    android:contentDescription="@string/title_pesquisa"                    android:scaleType="centerInside"                    android:src="@drawable/iconml" />                <android.support.design.widget.TextInputLayout                    android:id="@+id/username_text_input_layout"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:textColorHint="@color/title_ml">                    <EditText                        android:id="@+id/editApelido"                        android:layout_width="match_parent"                        android:layout_height="wrap_content"                        android:layout_centerHorizontal="true"                        android:layout_centerVertical="true"                        android:ems="10"                        android:hint="@string/apelido"                        android:padding="15dp"                        android:textSize="20sp" />                </android.support.design.widget.TextInputLayout>                <Button                    android:id="@+id/btnVerificar"                    android:layout_width="match_parent"                    android:layout_height="wrap_content"                    android:layout_marginTop="10dp"                    android:background="@color/colorPrimary"                    android:elevation="2dp"                    android:padding="20dp"                    android:fontFamily="@font/fontawesomefont"                    android:shadowColor="@color/title_ml"                    android:text="@string/verificar"                    android:textColor="@color/title_ml"                    android:onClick="searchPerson"/>            </LinearLayout>        </android.support.v7.widget.CardView>    </LinearLayout></android.support.constraint.ConstraintLayout>