<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="5dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="10dp"
            tools:ignore="MissingConstraints">

            <View
                android:id="@+id/category"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@color/title_ml"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="297dp"
                tools:layout_editor_absoluteY="16dp" />

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:stretchColumns="0,2"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imgemProduct"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:gravity="center"
                        android:text="Autor"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="@color/colorPrimary" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:id="@+id/titulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:maxLength="50"
                        android:text="Titulo"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="@color/title_ml" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:shrinkColumns="1" >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:fontFamily="@font/fontawesomefont"
                        android:text="@string/icon_money"
                        android:layout_margin="2dp"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorMoneyIcon"
                        />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:padding="4dp"
                        android:gravity="center"
                        android:maxLines="30"
                        android:text="Preço:    "
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="@color/title_ml"
                        android:textSize="@dimen/textSize_list" />

                    <TextView
                        android:fontFamily="@font/fontawesomefont"
                        android:text="@string/icon_condition"
                        android:layout_margin="2dp"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:textColor="@color/colorConditionIcon"
                        />

                    <TextView
                        android:id="@+id/condicao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:padding="4dp"
                        android:gravity="center"
                        android:maxLines="30"
                        android:text="Condicao:    "
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="@color/title_ml"
                        android:textSize="@dimen/textSize_list" />

                    <TextView
                        android:fontFamily="@font/fontawesomefont"
                        android:text="@string/icon_shop"
                        android:layout_margin="4dp"
                        android:gravity="center"
                        android:textColor="@color/colorShopIcon"
                        android:layout_height="match_parent"
                        />

                    <TextView
                        android:id="@+id/accptmp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:padding="4dp"
                        android:maxLines="30"
                        android:text="MercadoPago:    "
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="@color/title_ml"
                        android:textSize="@dimen/textSize_list" />

                    <TextView
                        android:id="@+id/taxaml"
                        android:fontFamily="@font/fontawesomefont"
                        android:text="@string/icon_tag"
                        android:layout_margin="2dp"
                        android:gravity="center"
                        android:textColor="@color/colorTaxIcon"
                        android:layout_height="match_parent"
                        />

                </TableRow>

            </TableLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnBuy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:fontFamily="@font/fontawesomefont"
            android:text="Comprar  &#xf07a;"
            android:textColor="@color/title_ml"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            tools:layout_editor_absoluteX="15dp"
            tools:ignore="MissingConstraints" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>